# ezpds

./: .dockerignore  .env.local.example  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  PRODUCT.md  README.md  compose.yaml  deny.toml  devenv.nix  docker-entrypoint.sh  flake.nix  justfile  litestream.yml  matrix.txt  pds.dev.toml  railway.toml  relay.dev.toml  rust-toolchain.toml
apps/admin-companion/src-tauri/: Cargo.toml  Entitlements.ios.plist  Info.ios.plist  tauri.conf.json
apps/admin-companion/src-tauri/.cargo/: config.toml
apps/admin-companion/src-tauri/capabilities/: default.json  mobile.json
apps/admin-companion/src-tauri/src/: device_key.rs  diagnostics.rs  keychain.rs  lib.rs  main.rs  pairings.rs  relay_client.rs  signing.rs
apps/identity-wallet/src-tauri/: Cargo.toml  Entitlements.ios.plist  Info.ios.plist  tauri.conf.json
apps/identity-wallet/src-tauri/.cargo/: config.toml
apps/identity-wallet/src-tauri/capabilities/: default.json  mobile.json
apps/identity-wallet/src-tauri/src/: agents.rs  app_passwords.rs  bg_backup.rs  blob_backup.rs  claim.rs  device_key.rs  diagnostics.rs  disaster_recovery.rs  handle_change.rs  home.rs  http.rs  identity_removal.rs  identity_store.rs  keychain.rs  lib.rs  main.rs  migrate.rs  migration_orchestrator.rs  oauth.rs  oauth_client.rs  oauth_consent.rs  pds_client.rs  plc_monitor.rs  recovery.rs  rekey.rs  repo_backup.rs  rotate_repo_key.rs  session_provider.rs  share_ceremony.rs  share_recovery.rs  source_login.rs  sovereign_session.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  config_loader.rs  error.rs  lib.rs
crates/crypto/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/crypto/src/: error.rs  keys.rs  lib.rs  mnemonic.rs  oauth_consent.rs  plc.rs  service_auth.rs  shamir.rs  sovereign_session.rs
crates/crypto/tests/: interop_vectors.rs
crates/pds/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/pds/assets/: auth.md  landing.html
crates/pds/lexicons/: README.md
crates/pds/src/: account_delete.rs  account_reaper.rs  admin_nonce_sweep.rs  agent_claim_sweep.rs  app.rs  blob_gc.rs  blob_scrub.rs  blob_store.rs  code_gen.rs  crawler.rs  dns.rs  email.rs  firehose.rs  firehose_gc.rs  handle.rs  identity_resolution.rs  iroh_tunnel.rs  jwks.rs  label_state.rs  labeler_watch.rs  main.rs  metrics.rs  no_input.rs  oauth_client_resolution.rs  platform.rs  plc_ops.rs  rate_limit.rs  record_write.rs  recovery_share.rs  relay_status.rs  repo_rev.rs  request_host.rs  rewrap.rs  session_issuer.rs  sovereign_session_nonce_sweep.rs  state.rs  sweep_status.rs  telemetry.rs  time.rs  token.rs  (+4 more)
crates/pds/src/auth/: agent_assertion.rs  bearer.rs  dpop.rs  extractors.rs  guards.rs  issuer_trust.rs  jwt.rs  mod.rs  oauth_client_resolution.rs  oauth_scopes.rs  password.rs  permission_sets.rs  rate_limit.rs  service_auth.rs  signing_key.rs  validation.rs
crates/pds/src/blob_mirror/: mod.rs  s3.rs  test_support.rs
crates/pds/src/db/: AGENTS.md  CLAUDE.md  account_deletion_tokens.rs  account_labels.rs  accounts.rs  admin_audit.rs  admin_devices.rs  agent_audit.rs  agent_auth.rs  agent_child_deletions.rs  app_passwords.rs  blobs.rs  blocks.rs  claim_codes.rs  dids.rs  email_tokens.rs  firehose_seq.rs  handles.rs  iroh_identity.rs  jwt_secret.rs  kek.rs  migrations.rs  mod.rs  oauth.rs  pending_oauth_authorizations.rs  plc_operation_tokens.rs  preferences.rs  recovery_audit.rs  recovery_escrow.rs  recovery_otps.rs  refresh_tokens.rs  relay_signing_keys.rs  repo_keys.rs  server_stats.rs  sessions.rs  sovereign_session_nonces.rs  transfers.rs
crates/pds/src/firehose/: events.rs  mod.rs  replay.rs  test_support.rs
crates/pds/src/identity/: did.rs  dns.rs  genesis.rs  handle.rs  mod.rs  plc.rs  proxy.rs  resolution.rs  well_known.rs
crates/pds/src/lexicon/: extractor.rs  formats.rs  mod.rs  output.rs  params.rs  schema.rs  validate.rs
crates/pds/src/read_after_write/: mod.rs  munge.rs  types.rs  viewer.rs
crates/pds/src/routes/: account_storage.rs  account_usage.rs  activate_account.rs  admin_account_repair.rs  admin_audit.rs  admin_devices.rs  admin_health.rs  admin_list_accounts.rs  admin_recovery_releases.rs  admin_relay_status.rs  admin_request_crawl.rs  admin_revoke_credentials.rs  admin_subject_defs.rs  admin_transfers.rs  agent_auth_test.rs  agent_child.rs  agent_claim.rs  agent_event.rs  agent_identity.rs  agents.rs  apply_writes.rs  appview_proxy.rs  atproto_did.rs  auth.rs  auth_md.rs  check_account_status.rs  claim_codes.rs  code_gen.rs  confirm_email.rs  create_account.rs  create_account_xrpc.rs  create_app_password.rs  create_did.rs  create_handle.rs  create_mobile_account.rs  create_record.rs  create_session.rs  create_signing_key.rs  deactivate_account.rs  delete_account.rs  (+78 more)
crates/pds/tests/: http_suite.rs
crates/pds/tests/common/: mod.rs
crates/relay/: CLAUDE.md  Cargo.toml
crates/relay/src/: app.rs  blob_gc.rs  blob_store.rs  crawler.rs  dns.rs  firehose.rs  iroh_tunnel.rs  main.rs  record_write.rs  telemetry.rs
crates/relay/src/auth/: dpop.rs  extractors.rs  jwt.rs  mod.rs  password.rs  rate_limit.rs  signing_key.rs
crates/relay/src/db/: CLAUDE.md  accounts.rs  blobs.rs  blocks.rs  dids.rs  iroh_identity.rs  mod.rs  oauth.rs  password_reset.rs  repo_keys.rs
crates/relay/src/routes/: apply_writes.rs  atproto_did.rs  auth.rs  claim_codes.rs  code_gen.rs  create_account.rs  create_did.rs  create_handle.rs  create_mobile_account.rs  create_record.rs  create_session.rs  create_signing_key.rs  delete_handle.rs  delete_record.rs  delete_session.rs  describe_repo.rs  describe_server.rs  get_device_relay.rs  get_did.rs  get_record.rs  get_relay_signing_key.rs  get_repo.rs  get_repo_signing_key.rs  get_session.rs  health.rs  list_records.rs  list_repos.rs  mod.rs  oauth_authorize.rs  oauth_client_metadata.rs  oauth_jwks.rs  (+18 more)
crates/repo-engine/: Cargo.toml
crates/repo-engine/src/: at_uri.rs  car_export.rs  car_import.rs  data_model.rs  datetime.rs  genesis.rs  lexicon.rs  lib.rs  mst.rs  records.rs  signer.rs
crates/repo-engine/tests/: interop_gate.rs
(+1297 files in other folders)
