[workspace]
members = [
    "crates/pds",
    "crates/repo-engine",
    "crates/crypto",
    "crates/common",
    "apps/identity-wallet/src-tauri",
    "apps/admin-companion/src-tauri",
]
# Vendored Tauri plugin — a path *dependency* of identity-wallet, NOT a workspace member: it
# pulls `tauri` (GUI toolchain) which the Linux PDS CI lacks, so it must never build standalone
# via `cargo build --workspace`. It builds only as identity-wallet's dep (excluded from ci-pds).
exclude = ["apps/identity-wallet/vendor/tauri-plugin-auth-session"]
resolver = "2"

[workspace.package]
# Single source of truth for every crate's version AND the version the PDS reports at
# `_health` / `describeServer` (via `env!("CARGO_PKG_VERSION")`). Keep in lockstep with the
# release tag: `just set-version X.Y.Z` to bump (in a reviewed PR), then `just release` cuts the
# matching `v X.Y.Z` tag. The release CI also asserts the tag equals this version.
version = "0.3.0"
edition = "2021"
publish = false

# Declare shared dependency versions here.
# Individual crates opt in with `{ workspace = true }`.
[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (pds)
axum = "0.7"
# Body utilities (pds) — used to classify axum::body::to_bytes errors (length-limit vs stream).
http-body-util = "0.1"

# HTTP client (pds)
# default-features = false: no OpenSSL; future crates must opt in to rustls-tls explicitly.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI argument parsing (pds)
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.29"
opentelemetry = { version = "0.28", features = ["trace"] }
opentelemetry-otlp = { version = "0.28", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "trace"] }

# HTTP middleware
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = { version = "0.5", features = ["util"] }

# ATProto (repo-engine)
atrium-api = "0.25.8"
atrium-repo = "0.1.8"

# Crypto (crypto)
# rsky-crypto = "0.2"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
aes-gcm = "0.10"
multibase = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.21"
ciborium = "0.2"
data-encoding = "2"
sha2 = "0.10"
zeroize = "1"
urlencoding = "2"
subtle = "2"
uuid = { version = "1", features = ["v4"] }

# JWT (pds auth)
jsonwebtoken = "9"

# Password hashing (pds createSession)
argon2 = { version = "0.5", features = ["password-hash"] }

# ATProto handle resolution — DNS TXT fallback (pds)
hickory-resolver = { version = "0.26", features = ["tokio", "system-config"] }

# Iroh QUIC tunnel — NAT-traversing device↔pds endpoint (pds)
iroh = "1"

# Blob MIME detection (pds)
infer = "0.19"

# Mobile apps (Tauri v2 — shared by identity-wallet + admin-companion).
# Now that two crates consume these, their versions live here per the workspace policy;
# members opt in with `{ workspace = true }` (and add crate-specific features locally).
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-log = "2"
log = "0.4"
security-framework = { version = "3" }

# Testing
tempfile = "3"

# Intra-workspace
common = { path = "crates/common" }
crypto = { path = "crates/crypto" }
repo-engine = { path = "crates/repo-engine" }

# ── Local patches ─────────────────────────────────────────────────────────────
#
# swift-rs 1.0.7 does not pass --disable-sandbox to `swift build`. On macOS 26
# (Tahoe), sandbox_apply() returns EPERM during manifest compilation, breaking
# the Tauri ios-api build step. The local patch adds --disable-sandbox.
# Remove when swift-rs ships a fix upstream. Tracked in docs/ios-upstream-bugs.md (Bug 1).
[patch.crates-io]
swift-rs = { path = "apps/identity-wallet/swift-rs-patch" }
