[workspace]
members = [
    "crates/pds",
    "crates/repo-engine",
    "crates/crypto",
    "crates/common",
    "apps/identity-wallet/src-tauri",
    "apps/admin-companion/src-tauri",
]
# Vendored Tauri plugins — path *dependencies* of the iOS apps, NOT workspace members: they
# pull `tauri` (GUI toolchain) which the Linux PDS CI lacks, so they must never build standalone
# via `cargo build --workspace`. Each builds only as its app's dep (excluded from ci-pds).
exclude = [
    "apps/identity-wallet/vendor/tauri-plugin-auth-session",
    "apps/admin-companion/vendor/tauri-plugin-sharesheet",
]
resolver = "2"

[workspace.package]
# Single source of truth for every crate's version AND the version the PDS reports at
# `_health` / `describeServer` (via `env!("CARGO_PKG_VERSION")`). Keep in lockstep with the
# release tag: `just set-version X.Y.Z` to bump (in a reviewed PR), then `just release` cuts the
# matching `v X.Y.Z` tag. The release CI also asserts the tag equals this version.
version = "0.3.3"
edition = "2021"
publish = false

# Declare shared dependency versions here.
# Individual crates opt in with `{ workspace = true }`.
[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (pds)
axum = "0.8"
# Body utilities (pds) — used to classify axum::body::to_bytes errors (length-limit vs stream).
http-body-util = "0.1"

# HTTP client (pds)
# default-features = false: no OpenSSL; future crates must opt in to rustls explicitly
# (the TLS feature was named rustls-tls before reqwest 0.13).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI argument parsing (pds)
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# The four OTel crates move in lockstep (tracing-opentelemetry releases track the
# opentelemetry minor). 0.32 also unifies the workspace on reqwest 0.13 and tonic
# 0.14/tower 0.5 — older opentelemetry pinned reqwest 0.12 and tonic 0.12, keeping
# a second major of each compiled into every build.
tracing-opentelemetry = "0.33"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-otlp = { version = "0.32", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace"] }

# HTTP middleware
# tower-http 0.6 (not 0.7): unifies with the 0.6.x already in the tree via tauri —
# 0.7 would reintroduce a dual-major compile of tower-http instead of removing one.
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower = { version = "0.5", features = ["util"] }

# ATProto (repo-engine)
atrium-api = "0.25.8"
atrium-repo = "0.1.8"

# Crypto (crypto)
# rsky-crypto = "0.2"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
aes-gcm = "0.10"
multibase = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.21"
ciborium = "0.2"
data-encoding = "2"
sha2 = "0.10"
zeroize = "1"
urlencoding = "2"
# URL parsing for the atproto-proxy SSRF guard (pds) — already resolved transitively via
# reqwest; declared directly so `url::Host` is nameable for host-type matching.
url = "2"
subtle = "2"
uuid = { version = "1", features = ["v4"] }

# JWT (pds auth)
jsonwebtoken = "9"

# Password hashing (pds createSession)
argon2 = { version = "0.5", features = ["password-hash"] }

# ATProto handle resolution — DNS TXT fallback (pds)
hickory-resolver = { version = "0.26", features = ["tokio", "system-config"] }

# Iroh QUIC tunnel — NAT-traversing device↔pds endpoint (pds)
iroh = "1"

# Blob MIME detection (pds)
infer = "0.19"

# Mobile apps (Tauri v2 — shared by identity-wallet + admin-companion).
# Now that two crates consume these, their versions live here per the workspace policy;
# members opt in with `{ workspace = true }` (and add crate-specific features locally).
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin-log = "2"
log = "0.4"
security-framework = { version = "3" }

# Testing
tempfile = "3"

# Intra-workspace
common = { path = "crates/common" }
crypto = { path = "crates/crypto" }
repo-engine = { path = "crates/repo-engine" }

# ── Local patches ─────────────────────────────────────────────────────────────
#
# swift-rs 1.0.7 does not pass --disable-sandbox to `swift build`. On macOS 26
# (Tahoe), sandbox_apply() returns EPERM during manifest compilation, breaking
# the Tauri ios-api build step. The local patch adds --disable-sandbox.
# Remove when swift-rs ships a fix upstream. Tracked in docs/ios-upstream-bugs.md (Bug 1).
[patch.crates-io]
swift-rs = { path = "apps/identity-wallet/swift-rs-patch" }
