[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

# common: shared types, error envelope, config parsing.

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
