[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

# common: shared types, error envelope, config parsing.

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
