[package]
name = "crypto"
version.workspace = true
edition.workspace = true
publish.workspace = true

# crypto: signing, Shamir secret sharing, DID operations.
# Depends on rsky-crypto (added when Wave 3 DID/key work begins).

[dependencies]
p256 = { workspace = true }
aes-gcm = { workspace = true }
multibase = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
