[package]
name = "crypto"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# crypto: signing, Shamir secret sharing, DID operations.
# Depends on rsky-crypto (added when Wave 3 DID/key work begins).

[dependencies]
p256 = { workspace = true }
k256 = { workspace = true }
aes-gcm = { workspace = true }
multibase = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
ciborium = { workspace = true }
data-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
