[package]
name = "pds"
version.workspace = true
edition.workspace = true
publish.workspace = true

# pds is the network-facing binary (the Custos PDS): Axum HTTP server, XRPC
# handlers, OAuth, provisioning API, blob storage.
[[bin]]
name = "pds"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["ws"] }
http-body-util = { workspace = true }
common = { workspace = true, features = ["axum"] }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
crypto = { workspace = true }
repo-engine = { workspace = true }
atrium-repo = { workspace = true }
# rustls (not native-tls, via the workspace dep): no system OpenSSL needed in the
# container image. stream: body streaming for the service proxy.
reqwest = { workspace = true, features = ["stream"] }
base64 = { workspace = true }
rand_core = { workspace = true }
data-encoding = { workspace = true }
sha2 = { workspace = true }
infer = { workspace = true }
lettre = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
hickory-resolver = { workspace = true }
iroh = { workspace = true }
jsonwebtoken = { workspace = true }
p256 = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
# Firehose frame encoding (com.atproto.sync.subscribeRepos): DAG-CBOR with CID tag-42
# links. ipld-core's serde feature is what makes `repo_engine::Cid` serialize as tag 42;
# serde_bytes is required for the CBOR byte-string `blocks` field.
serde_ipld_dagcbor = "0.6"
ipld-core = { version = "0.4", features = ["serde"] }
serde_bytes = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink", "async-await"] }

[dev-dependencies]
tower = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
# End-to-end WebSocket client for the subscribeRepos handler tests.
tokio-tungstenite = "0.24"
