[package]
name = "relay"
version.workspace = true
edition.workspace = true
publish.workspace = true

# relay is the network-facing binary: Axum HTTP server, XRPC handlers,
# OAuth, provisioning API, blob storage.
[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
common = { workspace = true, features = ["axum"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
serde_json = { workspace = true }
