[package]
name = "relay"
version.workspace = true
edition.workspace = true
publish.workspace = true

# relay is the network-facing binary: Axum HTTP server, XRPC handlers,
# OAuth, provisioning API, blob storage.
[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
common = { workspace = true, features = ["axum"] }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
crypto = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }
data-encoding = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
hickory-resolver = { workspace = true }
jsonwebtoken = { workspace = true }
p256 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
p256 = { workspace = true }
