[package]
name = "repo-engine"
version.workspace = true
edition.workspace = true
publish.workspace = true

# repo-engine: MST construction, CAR file storage, commit construction.
# Functional Core — no HTTP, no DB schema ownership, no process-level state.

[dependencies]
atrium-api = { workspace = true }
atrium-repo = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand_core = { workspace = true }
futures = "0.3"
