[package]
name = "repo-engine"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# repo-engine: MST construction, CAR file storage, commit construction.
# Functional Core — no HTTP, no DB schema ownership, no process-level state.

[dependencies]
atrium-api = { workspace = true }
atrium-repo = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
ipld-core = { version = "0.4", features = ["serde"] }
p256 = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_ipld_dagcbor = "0.6"
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
