[package]
name = "admin-companion"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "admin_companion"
path = "src/lib.rs"
# staticlib  → iOS static binary
# cdylib     → Android shared library
# rlib       → normal `cargo build` + integration tests
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri-specific — declared locally (not in workspace.dependencies), matching identity-wallet.
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Device-key crypto (software path uses the crypto crate; both paths use p256 + multibase).
crypto = { workspace = true }
p256 = { workspace = true }
multibase = { workspace = true }
tracing = { workspace = true }
# Secure Enclave + Keychain access (real-device and macOS/simulator software paths both
# touch the Keychain via this crate). OSX_10_12 enables the SE access-control APIs.
security-framework = { version = "3", features = ["OSX_10_12"] }

[build-dependencies]
# Tauri-specific — declared locally
tauri-build = { version = "2", features = [] }
