[package]
name = "admin-companion"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "admin_companion"
path = "src/lib.rs"
# staticlib  → iOS static binary
# cdylib     → Android shared library
# rlib       → normal `cargo build` + integration tests
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri + shared mobile deps live in [workspace.dependencies] (two apps consume them now).
tauri = { workspace = true, features = [] }
tauri-plugin-log = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Device-key crypto (software path uses the crypto crate; both paths use p256 + multibase).
crypto = { workspace = true }
p256 = { workspace = true }
multibase = { workspace = true }
tracing = { workspace = true }
# Request-envelope signing (Phase 7): SHA-256 body hash + base64url-no-pad signature
# encoding, byte-for-byte matching the relay's `admin_request_sign_string` contract.
sha2 = { workspace = true }
base64 = { workspace = true }
# Per-request nonce (anti-replay) — a fresh UUID v4 per signed request.
uuid = { workspace = true }
# Relay HTTP client. default-features = false + rustls-tls: iOS has no OpenSSL, so rustls
# is the only viable TLS backend (same rationale as identity-wallet's pds_client).
reqwest = { workspace = true }
# Secure Enclave + Keychain access (real-device and macOS/simulator software paths both
# touch the Keychain via this crate). OSX_10_12 enables the SE access-control APIs.
security-framework = { workspace = true, features = ["OSX_10_12"] }

# Mobile-only plugins (iOS/Android), gated to those targets so the macOS host build and
# its test suite never compile them. Registered behind `#[cfg(mobile)]` in lib.rs, granted
# via capabilities/mobile.json:
#   - barcode-scanner: camera QR on the Pair screen.
#   - biometric: Face ID / Touch ID user-presence gate on every signing action (AC7.4).
#   - sharesheet: the iOS Share Pane for a generated claim code (AC1.2).
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric = "2"
tauri-plugin-sharesheet = "0.0.1"

[build-dependencies]
tauri-build = { workspace = true, features = [] }
